2004-11-03  Wim Taymans  <wim@fluendo.com>

	* gst/alpha/gstalpha.c: (gst_alpha_method_get_type),
	(gst_alpha_chroma_key), (gst_alpha_chain):
	Fix stride issues. Does not completely work for odd
	heights.

2004-11-03  Christophe Fergeau  <teuf@gnome.org>

	* gst/videoscale/gstvideoscale.c: (gst_videoscale_getcaps):
	* gst/videoscale/videoscale.c: (videoscale_find_by_structure):
	leak fixes

2004-11-03  Wim Taymans  <wim@fluendo.com>

	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	(gst_ffmpegcsp_avpicture_fill):
	* gst/ffmpegcolorspace/imgconvert.c: (avpicture_get_size),
	(avpicture_alloc):
	* gst/ffmpegcolorspace/imgconvert_template.h:
	Use correct _fill function to get correct strides.

2004-11-02  David Schleef  <ds@schleef.org>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_header),
	(gst_qtdemux_add_stream), (qtdemux_parse), (qtdemux_parse_tree),
	(qtdemux_parse_udta), (qtdemux_tag_add), (gst_qtdemux_handle_esds):
	Change all g_print()s to debugging.  Add a bunch of consistency
	checks.

2004-11-02  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstdecodebin.c: (gst_decode_bin_class_init),
	(try_to_link_1), (get_our_ghost_pad), (remove_element_chain),
	(unlinked), (no_more_pads), (close_link):
	* gst/playback/gstplaybasebin.c: (gst_play_base_bin_init),
	(unknown_type), (add_element_stream), (new_decoded_pad),
	(removed_decoded_pad), (setup_source):
	* gst/playback/gststreaminfo.c: (gst_stream_info_get_type),
	(gst_stream_info_class_init), (gst_stream_info_init),
	(gst_stream_info_new), (gst_stream_info_dispose),
	(stream_info_mute_pad), (gst_stream_info_set_property),
	(gst_stream_info_get_property):
	* gst/playback/gststreaminfo.h:
	Fix playback of multiple files.
	a slightly different approach to handling dynamic pad removals.
	This one only looks at pads that we have linked.

2004-11-01  Christophe Fergeau  <teuf@gnome.org>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_finalize): fix an "invalid
	free" warning from libc.
